--- a/Dairy_Care_System/templates/about.html
+++ b/Dairy_Care_System/templates/about.html
@@ -16,11 +16,8 @@
     </style>
 </head>
 <body> 
-    <!-- <a href="{% url 'home' %}" class="home-link">
-        <img src="{% static 'images/homeblack.jpg' %}" alt="Home">
-    </a> -->
 
-    <!-- Navigation Bar -->
+<!-- Navigation Bar -->
 <ul>
     <a href="{% url 'home' %}">
         <i class="fas fa-home home-icon"></i>
@@ -60,9 +57,9 @@
         Experience the benefits of Dairy Care System and see how our platform can transform your farm operations and shopping experience. Whether you're managing farm activities or purchasing dairy products, our system is here to support your needs with efficiency and ease.
     </p><br>
 
-    <footer><b>
+    <footer><b><center>
         <p>&copy; 2024 Dairy Care System. All rights reserved.</p>
-    </b></footer>
+    </center></b></footer>
 
 </div>
 
