--- a/Dairy_Care_System/dairy/static/css/home.css
+++ b/Dairy_Care_System/dairy/static/css/home.css
@@ -25,7 +25,7 @@ li a {
 
 li a:hover {
     background-color: #ddd;
-    border-radius: 5px;
+    border-radius: 30px;
     transform: scale(1.1); /* Scale up the item on hover */
 }
 
@@ -57,18 +57,6 @@ h2 {
     align-items: center;
 }
 
-/* .home-link {
-    position: absolute;
-    top: 5px;
-    left: 20px;
-    text-decoration: none;
-}
-
-.home-link img {
-    width: 50px;
-    height: 50px;
-} */
-
 /* Home Icon Style */
 .home-icon {
     color: #000000; /* Color for the home icon */
@@ -76,6 +64,12 @@ h2 {
     margin-top: 10px; /* Space from the top of the header */
     float: left; /* Aligns the icon to the left */
     font-size: 30px; /* Increase the size of the icon (adjust as needed) */
+    transition: transform 0.3s ease, color 0.3s ease;
+}
+
+.home-icon:hover {
+    transform: scale(1.1);
+    
 }
 
 footer {
@@ -83,27 +77,3 @@ footer {
     margin-top: 20px;
     color: black;
 }
-
-
-/* .nav-item {
-    display: flex;
-    flex-direction: column;
-    align-items: center; 
-    text-decoration: none;
-    color: black;
-    transition: transform 0.3s ease; 
-}
-
-.nav-text {
-    display: none;
-    text-align: center; 
-    font-size: 14px; 
-}
-
-.nav-item:hover {
-    transform: scale(1.1); 
-}
-
-.nav-item:hover .nav-text {
-    display: block; 
-} */
