--- a/Dairy_Care_System/templates/addanimal.html
+++ b/Dairy_Care_System/templates/addanimal.html
@@ -153,7 +153,7 @@
     </style>
 </head>
 <body>
-    <a href="{% url 'animalslist' %}" class="back-link"><b>&larr; BACK</b></a>
+    <a href="{% url 'farmownerpage' %}" class="back-link"><b>&larr; BACK</b></a>
     <div class="container">
         <center><h2>Add Animal Details</h2></center>
         <form method="post" enctype="multipart/form-data" action="{% url 'addanimal' %}">
