--- a/Dairy_Care_System/templates/addproducts.html
+++ b/Dairy_Care_System/templates/addproducts.html
@@ -10,7 +10,7 @@
         body {
             background: url('{% static "images/addproduct.jpg" %}') no-repeat center center fixed;
             background-size: cover;
-            margin: 0;
+            margin-top: 30px;
             font-family: Arial, sans-serif;
             padding: 0;
             display: flex;
@@ -23,7 +23,8 @@
     
 </head>
 <body>
-<a href="{% url 'productslist' %}" class="back-link"><b>&larr; BACK</b></a>
+<a href="{% url 'farmownerpage' %}" class="back-link"><b>&larr; BACK</b></a>
+
 <form id="addProductForm" method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     <h1>Product Details Entry</h1><br>
