--- a/Dairy_Care_System/templates/custfeedback.html
+++ b/Dairy_Care_System/templates/custfeedback.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feedback Review</title>
     <link rel="stylesheet" href="{% static 'css/feedbackreview.css' %}">
-    <link rel="stylesheet" href="{% static 'css/custheadsidenav.css' %}">
+    <link rel="stylesheet" href="{% static 'css/headsidenav.css' %}">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
@@ -61,19 +61,19 @@
         }
         
         /* Styling for the back link in the upper left corner */
-.back-link {
-    position: absolute;
-    top: 20px;
-    left: 20px;
-    font-size: 25px;
-    color: black;
-    text-decoration: none;
-    font-family: 'Comic Sans MS', cursive;
-}
+        .back-link {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            font-size: 25px;
+            color: black;
+            text-decoration: none;
+            font-family: 'Comic Sans MS', cursive;
+        }
 
-.back-link:hover {
-    text-decoration: underline;
-}
+        .back-link:hover {
+            text-decoration: underline;
+        }
     </style>
     <!-- Add Font Awesome and SweetAlert2 CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
