--- a/Dairy_Care_System/templates/preorder.html
+++ b/Dairy_Care_System/templates/preorder.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pre-Order {{ product.product_name }}</title>
-    <link rel="stylesheet" href="{% static 'css/custheadsidenav.css' %}">
+    <link rel="stylesheet" href="{% static 'css/headsidenav.css' %}">
     <style>
         /* General reset */
         * {
