--- a/Dairy_Care_System/templates/preorderlisting.html
+++ b/Dairy_Care_System/templates/preorderlisting.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Pre-Orders</title>
-    <link rel="stylesheet" href="{% static 'css/custheadsidenav.css' %}">
+    <link rel="stylesheet" href="{% static 'css/headsidenav.css' %}">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -120,40 +120,6 @@
             </div>
         </div>
     </ul>
-
-    <!-- Navigation Bar-->
-    <!-- <ul>
-        <div class="header">
-            <div class="nav-item">
-                <li><b><a href="{% url 'custproductslist' %}"><i class="fas fa-shopping-basket"></i> Products List</a></b></li>
-            </div>
-            <div class="nav-item">
-                <li><b><a href="{% url 'wishlist' %}"><i class="fas fa-heart"></i> Wishlist</a></b></li>
-            </div>
-            <div class="nav-item">
-                <li><b><a href="{% url 'viewcart' %}"><i class="fas fa-shopping-cart"></i> Cart</a></b></li>
-            </div>
-            <div class="nav-item">
-                <li><b><a href="{% url 'orderhistory' %}"><i class="fas fa-shopping-bag"></i> Orders</a></b></li>
-            </div>
-            <div class="nav-item">
-                <li><b><a href="{% url 'preorderlisting' %}"><i class="fas fa-clipboard-list"></i> Pre-Orders</a></b></li>
-            </div>
-            <div class="nav-item">
-                <li><b><a href="{% url 'feedbackpage' %}"><i class="fas fa-comments"></i> Feedback</a></b></li>
-            </div>
-            <div class="nav-item">
-                <li>
-                    <b><a href="#" class="username" onclick="toggleDropdown()"><i class="fas fa-user-circle"></i> {{ username }}</a></b>
-                    <div class="dropdown-content" id="dropdown-content">
-                        <a href="{% url 'userprofile' %}"><i class="fas fa-user"></i> Profile</a>
-                        <a href="{% url 'customerpage' %}"><i class="fas fa-home"></i> Dashboard</a>
-                        <a href="#" onclick="confirmLogout()"><i class="fas fa-sign-out-alt"></i> Logout</a>
-                    </div>
-                </li>
-            </div>
-        </div>
-    </ul> -->
     <br><br>
 
     <center><h1>Your Pre-Orders</h1></center>
