--- a/Dairy_Care_System/templates/registration.html
+++ b/Dairy_Care_System/templates/registration.html
@@ -16,9 +16,6 @@
     </style>
 </head>
 <body>
-    <!-- <a href="{% url 'home' %}" class="home-link">
-        <img src="{% static 'images/homeblue.jpg' %}" alt="Home">
-    </a> -->
     
     <a href="{% url 'home' %}">
         <i class="fas fa-home home-icon"></i>
@@ -26,7 +23,7 @@
 
     <div class="container">
         <div class="login-box">
-            <h2><b>Register</b></h2>
+            <h2><b><u>Register</u></b></h2>
             <form id="registrationForm" method="POST">
                 {% csrf_token %}
 
@@ -42,11 +39,6 @@
                     <div class="error-message" id="usernameError"></div>
                 </div>
                 
-                <!-- <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="email" id="email" name="email" placeholder="Enter your email">
-                    <div class="error-message" id="emailError"></div>
-                </div> -->
                 <div class="form-group">
                     <label for="phone">Phone Number</label>
                     <input type="tel" id="phone" name="phone" placeholder="Enter your phone number">
